[tool.poetry]
name = "asistenciamac"
version = "0.1.0"
description = ""
authors = ["restevean <restevean@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
Record = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
